# pigweed-mimxrt595-samples

./: .bazelrc  .ci.yml  .gitignore  .gitmodules  .gn  .pw_console.yaml  .pylintrc  BUILD.bazel  BUILD.gn  BUILDCONFIG.gn  MODULE.bazel  OWNERS  PW_PLUGINS  README.md  WORKSPACE  activate.bat  banner.txt  bootstrap.bat  bootstrap.sh  env_setup.json  navbar.md  pigweed.json
autogenerated/: BUILD
build_overrides/: pi_pico.gni
config/: BUILD.bazel  app_bluetooth_config.h  extra_copts.bzl  peripherals.c  pin_mux.c
docs/: BUILD.gn  conf.py  customization.rst  index.rst
examples/: BUILD.gn  docs.rst
examples/01-blinky/: BUILD.bazel  BUILD.gn  docs.rst  main.cc
examples/01_blinky/: BUILD.bazel  docs.rst
examples/01_bluetooth/: BUILD.bazel  BUILD.gn  main.cc
examples/02-string-functions/: BUILD.gn  docs.rst  system_status.h  tokenizer_database.csv
examples/02-unit-testing/: bitops.cc  docs.rst
examples/02-unit-testing/public/: bitops.h
examples/02_unit_testing/: BUILD.bazel  BUILD.gn  bitops.cc  bitops_test.cc  docs.rst  main.cc
examples/02_usb_cdc_vcom/: BUILD.gn  virtual_com.c
examples/02_usb_fastboot/: BUILD.bazel  BUILD.gn  fastboot.h  flash.cc  flash.h  main.cc  transport_mimxrt595evk.cc  transport_mimxrt595evk.h
examples/03-rpc/: BUILD.gn  docs.rst  remoticon_service_nanopb.cc  rpc_example_service_nanopb.cc  tokenizer_database.csv
examples/03-rpc/rpc_example_protos/: rpc_example_service.options
examples/03_rpc/: BUILD.bazel  docs.rst  main.cc
examples/03_rpc/public/rpc_example/: rpc_example_service_nanopb.h
examples/03_rpc/rpc_example_protos/: rpc_example_service.proto
examples/03_user_hello/: BUILD.bazel  main.cc
examples/04-kvs/: BUILD.gn  docs.rst  main.cc  tokenizer_database.csv
examples/04_bluetooth/: BUILD.gn  main.cc
examples/04_bluetooth_audio/: BUILD.bazel  main.cc
examples/04_bluetooth_audio/config/: BUILD.bazel  clock_config.c  pin_mux.c  pin_mux.h  wifi_bt_config.c
examples/04_bluetooth_audio/zephyr_bt_profiles_port/: BUILD.bazel  a2dp.cc  a2dp.h  a2dp_codec_sbc.h  avdtp.cc  avdtp.h  avdtp_internal.h  l2cap.h  netbuf.cc  netbuf.h  rfcomm.cc  rfcomm.h  rfcomm_internal.h  sbc.c  sbc.cc  sbc.h  zephyr_interface.cc  zephyr_interface.h
examples/05-factory-test/: BUILD.gn  docs.rst  tokenizer_database.csv
examples/05_usb_cdc_vcom/: BUILD.gn  main.cc  usb_device_descriptor.c  virtual_com.c  virtual_com.h
lib/pw_fastboot/: BUILD.bazel  commands.cc  device_variable.cc  fastboot_device.cc
lib/pw_fastboot/public/pw_fastboot/: commands.h  device_hal.h  device_variable.h  fastboot_device.h  transport.h
lib/pw_fastboot_usb_mcuxpresso/: BUILD.bazel  packet_mimxrt595evk.cc
libraries/pw_board_led/: BUILD.bazel
libraries/pw_board_led_host/: BUILD.bazel
libraries/pw_board_led_stm32f429i_disc1/: BUILD.bazel
libraries/pw_board_led_teensy/: led.cc
libraries/pw_spin_delay_arduino/: BUILD.gn
libraries/pw_spin_delay_host/: BUILD.gn
libraries/pw_spin_delay_stm32f429i_disc1/: BUILD.gn
pw_bluetooth_sapphire_mcuxpresso/: controller.cc  low_energy_advertiser.cc
pw_bluetooth_sapphire_mcuxpresso/public/pw_bluetooth_sapphire_mcuxpresso/: low_energy_advertiser.h
source/: BUILD.gn  main.cc  tokenizer_database.csv
source/arduino_example/: BUILD.gn  main.cc
source/logging/: BUILD.gn  hldc_log_handler.cc  log.cc  tokenized_log_handler.cc
source/pw_board_led_host/: BUILD.gn  led.cc
source/pw_board_led_stm32f429i_disc1/: BUILD.gn
source/pw_board_led_teensy/: BUILD.gn
source/pw_spin_delay_arduino/: BUILD.gn  delay.cc
source/pw_spin_delay_host/: BUILD.gn  delay.cc
source/pw_spin_delay_stm32f429i_disc1/: BUILD.gn
source/simple_counter/: BUILD.gn  simple_counter.cc  simple_counter_test.cc
source/simple_counter/public/simple_counter/: simple_counter.h
source/teensy_flash/: BUILD.gn  README.md  teensy_flash.cc  teensy_flash_test_key_value_store.cc  teensy_flash_test_partition.cc
source/teensy_flash/public/teensy_flash/: teensy_flash.h
source/teensy_time/: BUILD.gn  README.md  teensy_main.cc  tokenizer_database.csv
targets/: BUILD.bazel  common_backends.gni  transition.bzl
targets/arduino/: BUILD.gn  target_toolchains.gni
targets/host/: BUILD.gn  target_toolchains.gni
targets/mimxrt595_evk_freertos/: BUILD.bazel  BUILD.gn  FreeRTOSConfig.h  board.h  boot.cc  bootloader.h  mimxrt595_executable.gni  mimxrt595_flash.ld  target_toolchains.gni  transition.bzl  transition_bootloader.bzl
targets/mimxrt595_evk_freertos_user/: BUILD.bazel  transition.bzl
targets/rp2040/: BUILD.bazel  BUILD.gn
targets/stm32f429i-disc1/: target_toolchains.gni
targets/stm32f429i_disc1/: BUILD.gn  target_toolchains.gni
targets/stm32f429i_disc1_stm32cube/: BUILD.bazel  target_toolchains.gni
tools/: BUILD.bazel  BUILD.gn  presubmit_checks.py  setup.py  setup_windows_prerequisites.bat
tools/sample_project_tools/: build_project.py  console.py  device_sim.py  find_files.py  flash_device.py  presubmit_checks.py
workshop/: README.md
workshop/01-blinky/: BUILD.gn  README.md  main.cc  tokenizer_database.csv
workshop/02-string-functions/: BUILD.gn  README.md  string_demo.cc  system_status_test.cc  teensy_main.cc  tokenizer_database.csv
workshop/03-rpc/: BUILD.gn  README.md  main.cc  remoticon_service_nanopb.cc  tokenizer_database.csv
workshop/03-rpc/public/remoticon/: remoticon_service_nanopb.h
workshop/03-rpc/remoticon_proto/: remoticon.proto
workshop/04-kvs/: BUILD.gn  README.md  main.cc  tokenizer_database.csv
workshop/05-factory-test/: BUILD.gn  README.md  factory_test.py  main.cc  remoticon_service_nanopb.cc  tokenizer_database.csv
workshop/05-factory-test/public/remoticon/: remoticon_service_nanopb.h
