# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

buildconfig = "//BUILDCONFIG.gn"

default_args = {

  # Default gn build virtualenv target.
  pw_build_PYTHON_BUILD_VENV = "//:sample_project_build_venv"

  pw_build_TEST_TRANSITIVE_PYTHON_DEPS = false

  dir_pw_third_party_freertos = "//third_party/FreeRTOS"
  pw_target_mimxrt595_evk_freertos_MANIFEST = "//third_party/pigweed/third_party/mcuxpresso/sdk/EVK-MIMXRT595_manifest_v3_14.xml"
  pw_third_party_mcuxpresso_SDK = "//targets/mimxrt595_evk_freertos:sdk"
  dir_pw_third_party_mcuxpresso = "//third_party/pigweed/third_party/mcuxpresso/sdk"

}
