package(default_visibility = ["//visibility:public"])

cc_library(
    name = "init_peripherals",
    hdrs = [
        "wifi_bt_config.h",
        "pin_mux.h",
        "clock_config.h",
        "peripherals.h",
        "board.h",
    ],
    srcs = [
        "wifi_bt_config.c",
        "pin_mux.c",
        "clock_config.c",
        "peripherals.c",
        "board.c",
        "@pigweed//third_party/mcuxpresso:config/app_bluetooth_config.h",
    ],
    includes = [ "." ],
    deps = [
        "@pigweed//targets:mcuxpresso_sdk",
    ],
    copts = [
        "-include", "$(location @pigweed//third_party/mcuxpresso:config/app_bluetooth_config.h)",
        "-Wno-cast-qual",
    ],
    alwayslink = 1,
)

cc_library(
  name = "pw_function_config_override",
  defines = [
    "PW_FUNCTION_ENABLE_DYNAMIC_ALLOCATION=1",
  ],
)
