package(default_visibility = ["//visibility:public"])

exports_files(["app_bluetooth_config.h"])

cc_library(
    name = "config_headers",
    srcs = [
        "app_bluetooth_config.h",
    ],
    hdrs = [
        "wifi_bt_config.h",
        "pin_mux.h",
        "clock_config.h",
        "peripherals.h",
        "board.h",
        "edgefast_bluetooth_config.h",
        "wifi_bt_module_config.h",
        "wifi_config.h",
        "ffconf.h",
        "usb_host_config.h",
        "sdmmc_config.h",
    ],
    includes = [ "." ],
    copts = [
        "-Wno-cast-qual",
        "-include", "$(location app_bluetooth_config.h)",
    ],
    deps = [
        "@mcuxpresso//:platform.drivers.lpc_gpio.MIMXRT595S",
        "@mcuxpresso//:component.rt_gpio_adapter.MIMXRT595S",
    ],
)

cc_library(
    name = "init_peripherals",
    srcs = [
        "wifi_bt_config.c",
        "pin_mux.c",
        "clock_config.c",
        "peripherals.c",
        "board.c",
        "app_bluetooth_config.h",
    ],
    deps = [
        ":config_headers",
        "@pigweed//targets:mcuxpresso_sdk",
    ],
    copts = [
        "-include", "$(location app_bluetooth_config.h)",
        "-Wno-cast-qual",
    ],
    alwayslink = 1,
)

cc_library(
  name = "pw_function_config_override",
  defines = [
    "PW_FUNCTION_ENABLE_DYNAMIC_ALLOCATION=1",
  ],
)

cc_library(
    name = "mcuxpresso_sdk_bt_usb",
    target_compatible_with = [
        "@pigweed//pw_build/constraints/board:mimxrt595_evk",
        "@pigweed//pw_build/constraints/rtos:freertos",
        "@platforms//cpu:armv8-m",
    ],
    deps = [
        "@mcuxpresso//:component.serial_manager.MIMXRT595S",
        "@mcuxpresso//:component.serial_manager_uart.MIMXRT595S",
        "@mcuxpresso//:component.audio_flexcomm_i2s_dma_adapter.MIMXRT595S",
        "@mcuxpresso//:driver.wm8904.MIMXRT595S",
        "@mcuxpresso//:driver.codec.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.flexcomm_i2c.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.flexcomm_spi.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.flexcomm_usart_dma.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.flexcomm_usart_freertos.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.flexio_spi.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.inputmux.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.lpc_dma.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.lpc_gpio.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.lpc_iopctl.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.flexspi.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.mu.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.pint.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.power.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.cache_cache64.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.flash_config.evkmimxrt595.MIMXRT595S",
        "@mcuxpresso//:platform.drivers.i3c.MIMXRT595S",
        "@mcuxpresso//:utility.debug_console.MIMXRT595S",
        "@mcuxpresso//:device.MIMXRT595S_CMSIS.MIMXRT595S",
        "@mcuxpresso//:middleware.wifi.fwdnld_intf_abs.MIMXRT595S",
        "@mcuxpresso//:middleware.edgefast_bluetooth.wifi_nxp.controller.base.MIMXRT595S",
        "@mcuxpresso//:middleware.edgefast_bluetooth.btble.ethermind.cm33.MIMXRT595S",
        "@mcuxpresso//:middleware.usb.device_controller_ip3511hs.MIMXRT595S",
        "@mcuxpresso//:middleware.usb.phy.MIMXRT595S",
        "@mcuxpresso//:middleware.usb.device.controller.driver.MIMXRT595S",
        "@mcuxpresso//:middleware.usb.device.ip3511hs_config_header.MIMXRT595S",
        "@mcuxpresso//:middleware.usb.device.common_header.MIMXRT595S",
        "@mcuxpresso//:middleware.usb.common_header.MIMXRT595S",
        "@mcuxpresso//:component.mflash.rt595.MIMXRT595S",
        "@mcuxpresso//:component.i3c_adapter.MIMXRT595S",
        "@mcuxpresso//:middleware.edgefast_bluetooth.common.ethermind.MIMXRT595S",
        "@mcuxpresso//:middleware.edgefast_bluetooth.btble.ethermind.lib.cm33.MIMXRT595S",
    ],
    linkopts = [
        "-Wl,--whole-archive",
        "$(execpath @mcuxpresso//:middleware.edgefast_bluetooth.btble.ethermind.lib.cm33.MIMXRT595S)",
        "-Wl,--no-whole-archive",
    ],
)

cc_library(
    name = "mcuxpresso_sdk_lib_config_define",
    hdrs = [
        "wifi_config.h",
    ],
    includes = [ "." ],
    defines = [
        "BOOT_HEADER_ENABLE=1",
        "CPU_MIMXRT595SFFOC_cm33",
        "DEBUG_CONSOLE_TRANSFER_NON_BLOCKING=1",
        "SDK_OS_FREE_RTOS",
        "SDK_I2C_BASED_COMPONENT_USED=1",
        "SDK_I3C_BASED_COMPONENT_USED=1",
        "BOARD_USE_CODEC=1",
        "WIFI_BT_TX_PWR_LIMITS=wlan_txpwrlimit_cfg_murata_1XK_WW.h",
        "SD8978",
        "SDMMCHOST_OPERATION_VOLTAGE_1V8",
        "SD_TIMING_MAX=kSD_TimingDDR50Mode",
        "WIFI_BT_USE_M2_INTERFACE",
        "WLAN_ED_MAC_CTRL=\"{.ed_ctrl_2g = 0x1, .ed_offset_2g = 0x0, .ed_ctrl_5g = 0x1, .ed_offset_5g = 0x6}\"",
    ],
    target_compatible_with = [
        "@pigweed//pw_build/constraints/board:mimxrt595_evk",
        "@pigweed//pw_build/constraints/rtos:freertos",
        "@platforms//cpu:armv8-m",
    ],
    deps = [
        "@pigweed//targets/mimxrt595_evk_freertos:freertos_config",
        "@freertos",
    ],
)

cc_library(
    name = "mcuxpresso_sdk_lib_config_bt_usb",
    target_compatible_with = [
        "@pigweed//pw_build/constraints/board:mimxrt595_evk",
        "@pigweed//pw_build/constraints/rtos:freertos",
        "@platforms//cpu:armv8-m",
    ],
    deps = [
        ":config_headers",
        "@pigweed//targets/mimxrt595_evk_freertos:freertos_config",
        "@freertos",
    ],
)

