# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/python.gni")
import("$dir_pw_build/python_action.gni")
import("$dir_pw_docgen/docs.gni")

pw_doc_group("static_assets") {
  inputs = [
    "_static/pw_logo.ico",
    "_static/pw_logo.svg",
  ]
}

pw_doc_gen("docs") {
  conf = "conf.py"
  sources = [
    "customization.rst",
    "index.rst",
  ]
  output_directory = target_gen_dir
  deps = [
    ":static_assets",
    "//examples:docs",
    "//examples/01-blinky:docs",
    "//examples/02-string-functions:docs",
    "//examples/03-rpc:docs",
    "//examples/04-kvs:docs",
    "//examples/05-factory-test:docs",
  ]

  # Required to set the PYTHONPATH so automodule, autoclass or autofunction RST
  # directives work.
  python_metadata_deps = [ "$dir_pw_env_setup:core_pigweed_python_packages" ]
}
