# Comment this import to prevent it from being reordered.
import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_unit_test/test.gni")

pw_executable("hello_world") {
  sources = [ "main.cc" ]
  deps = [
    "$dir_pw_log",

    # The assert backend is defined in the toolchain with `pw_assert_BACKEND`.
    "$dir_pw_assert",

    "//source/simple_counter:simple_counter",
    ]
}
