# Comment this import to prevent it from being reordered.
import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")

pw_executable("hello_world") {
  sources = [ "main.cc" ]
  deps = [
    "$dir_pw_log",

    # The assert backend is defined in the toolchain with `pw_assert_BACKEND`.
    "$dir_pw_assert",

    # RPC dependencies
    "$dir_pw_hdlc_lite:pw_hdlc_lite",
    "$dir_pw_hdlc_lite:pw_rpc",
    "$dir_pw_rpc:nanopb_server",
    "$dir_pw_rpc/nanopb:echo_service",

    "//source/simple_counter:simple_counter",
    ]
}
