# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/python.gni")

pw_python_package("tools") {
  setup = [
    "pyproject.toml",
    "setup.cfg",
  ]
  sources = [
    "sample_project_tools/__init__.py",
    "sample_project_tools/build_project.py",
    "sample_project_tools/console.py",
    "sample_project_tools/device_sim.py",
    "sample_project_tools/flash_device.py",
    "sample_project_tools/presubmit_checks.py",
  ]
  python_deps = [
    "$dir_pw_build/py",
    "$dir_pw_bloat/py",
    "$dir_pw_cli/py",
    "$dir_pw_doctor/py",
    "$dir_pw_emu/py",
    "$dir_pw_env_setup/py",
    "$dir_pw_file/py",
    "$dir_pw_hdlc/py",
    "$dir_pw_ide/py",
    "$dir_pw_log/py",
    "$dir_pw_presubmit/py",
    "$dir_pw_protobuf:common_protos.python",
    "$dir_pw_rpc:protos.python",
    "$dir_pw_system/py",
    "$dir_pw_toolchain/py",
    "$dir_pw_module/py",
    "$dir_pw_unit_test/py",
    "$dir_pw_watch/py",
    "$dir_pw_allocator/py",
    "$dir_pw_docgen/py",
    "//examples/03_rpc:rpc_example_protos.python",
  ]
  pylintrc = "$dir_pigweed/.pylintrc"
}
